@@ -42,6 +42,7 @@ export(
   "extract_environment",
   "extract_items",
   "include_supplement",
+  "match_exams_call",
 
   ## Stress testing,
   "stresstest_exercise",
